kubernetes/apps/media/prowlarr/ingress/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: prowlarr-ingress
  annotations:
    kubernetes.io/ingress.class: traefik-internal
    external-dns.alpha.kubernetes.io/target: default.internal.javiersant.com
    gethomepage.dev/enabled: "true"
    gethomepage.dev/href: "https://prowlarr.default.internal.javiersant.com"
    gethomepage.dev/description: Tracker Indexer
    gethomepage.dev/group: Media
    gethomepage.dev/icon: prowlarr.svg
    gethomepage.dev/name: Prowlarr
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`prowlarr.default.internal.javiersant.com`)
      kind: Rule
      services:
        - kind: Service
          name: prowlarr
          port: 9696
  tls:
    secretName: wildcard-javiersant-com-tls
